# Framework

./: .gitignore  .gitmodules  CMakeLists.txt  HACKING.md  INSTALL  LICENSE  LICENSE_TEMPLATE  README.md  abstractsessionmanager_8hpp_source.html  annotated.html  argumentmanager_8hpp_source.html  callback_8hpp_source.html  classNuria_1_1AbstractConditionEvaluator-members.html  classNuria_1_1AbstractConditionEvaluator.html  classNuria_1_1AbstractSessionManager-members.html  classNuria_1_1AbstractSessionManager.html  classNuria_1_1ArgumentManager-members.html  classNuria_1_1ArgumentManager.html  classNuria_1_1Callback-members.html  classNuria_1_1Callback.html  classNuria_1_1ConditionEvaluator-members.html  classNuria_1_1ConditionEvaluator.html  classNuria_1_1Debug-members.html  classNuria_1_1Debug.html  classNuria_1_1DebugIgnore-members.html  classNuria_1_1DebugIgnore.html  classNuria_1_1Dependency-members.html  classNuria_1_1Dependency.html  classNuria_1_1DependencyManager-members.html  classNuria_1_1DependencyManager.html  classNuria_1_1FastCgiBackend-members.html  classNuria_1_1FastCgiBackend.html  classNuria_1_1Field-members.html  classNuria_1_1Field.html  classNuria_1_1FileTemplateLoader-members.html  classNuria_1_1FileTemplateLoader.html  classNuria_1_1HttpBackend-members.html  classNuria_1_1HttpBackend.html  classNuria_1_1HttpClient-members.html  classNuria_1_1HttpClient.html  (+232 more)
cmake/: add_unittest.cmake  common.cmake  doxygen.cmake  nuria_tria.cmake  win32_stdlib_include.cmake
cmake/install/NuriaCore/: NuriaCoreConfig-enableCXX11.cmake
cmake/install/NuriaFramework/: NuriaFrameworkConfig.cmake.in
cmake/install/tria/: triaConfig-macro.cmake
config/: nuria.prf  nuriavars.prf.in
contrib/doxygen/: Doxyfile
contrib/pkg/archlinux/nuria-framework-git/: PKGBUILD
features/: nuria.prf
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  (+73 more)
